fix&feat: message not auto scroll and custom scrollbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,6 +36,11 @@
     background: #888;
     border-radius: 1rem;
     border: 1px solid transparent;
+    visibility: hidden;
+  }
+
+  :hover::-webkit-scrollbar-thumb {
+    visibility: visible;
   }
 
   ::-webkit-scrollbar-track {
